--- a/debian/src/apache-vhost.conf
+++ b/debian/src/apache-vhost.conf
@@ -54,7 +54,7 @@
           php_admin_value sendmail_path "/var/lib/typo3-dummy/execdir/sendmail -t -i"
 
           # Limit the files that can be opened by PHP to the specified directory-tree(s)
-          php_admin_value open_basedir /var/run/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/:/usr/share/javascript/prototype/:/usr/share/javascript/scriptaculous/
+          php_admin_value open_basedir /var/run/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/:/usr/share/javascript/prototype/:/usr/share/javascript/scriptaculous/:/usr/share/php/Swift/
           # in safe mode programs that are not in this directory will not be started
           php_admin_value safe_mode_exec_dir /var/lib/typo3-dummy/execdir/
 
