--- a/debian/src/control
+++ b/debian/src/control
@@ -1,11 +1,11 @@
-Source: typo3-src
+Source: typo3-src-4.6
 Section: web
 Priority: optional
 Maintainer: Christian Welzel <gawain@camlann.de>
 Build-Depends: debhelper (>= 7), po-debconf
 Standards-Version: 3.9.1
 
-Package: typo3-src-4.5
+Package: typo3-src-4.6
 Architecture: all
 Depends: ttf-dejavu, libjs-prototype (>=1.6.0), libjs-scriptaculous (>=1.8.1), libphp-adodb (>=5.07), libphp-swiftmailer (>=4.0.6), ${misc:Depends}
 Recommends: exim4 | mail-transport-agent, graphicsmagick, php5, php5-cli, php5-gd, php5-mysql, php5-xcache | php-apc, typo3-database, typo3-dummy
@@ -33,7 +33,7 @@ Description: TYPO3 - The enterprise level open source WebCMS (Core)
 Package: typo3-database
 Architecture: all
 Depends: mysql-server, dbconfig-common (>= 1.8.39), debconf, ${misc:Depends}
-Recommends: typo3-dummy, typo3-src-4.5
+Recommends: typo3-dummy, typo3-src-4.6
 Homepage: http://www.typo3.com
 Description: TYPO3 - The enterprise level open source WebCMS (Database)
  TYPO3 is a free Open Source content management system for enterprise purposes
@@ -58,7 +58,7 @@ Description: TYPO3 - The enterprise level open source WebCMS (Database)
 
 Package: typo3-dummy
 Architecture: all
-Depends: exim4 | mail-transport-agent, dbconfig-common, debconf, graphicsmagick, lsb-base (>= 3.0-6), php5, php5-cli, php5-gd, php5-mysql, typo3-src-4.5, ${misc:Depends}
+Depends: exim4 | mail-transport-agent, dbconfig-common, debconf, graphicsmagick, lsb-base (>= 3.0-6), php5, php5-cli, php5-gd, php5-mysql, typo3-src-4.6, ${misc:Depends}
 Recommends: apache2.2-common, catdoc, ghostscript, memcached, php5-curl, php5-memcache, php5-suhosin, php5-xcache | php-apc, ppthtml, typo3-database, unrtf, xlhtml, xpdf-utils
 Description: web content management system
  TYPO3 is an enterprise-level content management system for use on the web
@@ -85,7 +85,7 @@ Description: web content management system
 
 Package: typo3
 Architecture: all
-Depends: typo3-database, typo3-dummy, typo3-src-4.5, ${misc:Depends}
+Depends: typo3-database, typo3-dummy, typo3-src-4.6, ${misc:Depends}
 Homepage: http://www.typo3.com
 Description: The enterprise level open source WebCMS (Meta)
  TYPO3 is a free Open Source content management system for enterprise purposes
